--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -5,11 +5,11 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{C22FA9EE-EBFF-6669-DDA9-C1F27475A5F2}</ProjectGuid>
+	<ProjectGuid>{5B9FF267-005F-A3BF-219E-FEAE2D8C894F}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-UnityScript</AssemblyName>
+	<AssemblyName>Assembly-CSharp</AssemblyName>
 	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
 	<FileAlignment>512</FileAlignment>
 	<BaseDirectory>Assets</BaseDirectory>
@@ -46,13 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\ClickGetPoint.js" />
-     <Compile Include="Assets\Scripts\Connect.js" />
-     <Compile Include="Assets\Scripts\FingerLine.js" />
-     <Compile Include="Assets\Scripts\FollowLine.js" />
-     <Compile Include="Assets\Scripts\LineMouse.js" />
-     <Compile Include="Assets\Scripts\Score.js" />
-     <Compile Include="Assets\Scripts\SpawnBarrels.js" />
+     <Compile Include="Assets\003 Drawing Lines\src\LinesGR.cs" />
+     <Compile Include="Assets\Scripts\DrawPath.cs" />
+     <Compile Include="Assets\Scripts\FollowPath.cs" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\003 Drawing Lines\src\BlackLine.shader" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-BasicOutline.shader" />
