update train menu

--- a/Project/Assembly-CSharp-vs.csproj
+++ b/Project/Assembly-CSharp-vs.csproj
@@ -55,16 +55,15 @@
      <Compile Include="Assets\Scripts\Crossing Street\FroggerStart.cs" />
      <Compile Include="Assets\Scripts\Crossing Street\PowerUp.cs" />
      <Compile Include="Assets\Scripts\Crossing Street\TrafficSpawner.cs" />
+     <Compile Include="Assets\Scripts\Menus\DataContainer.cs" />
+     <Compile Include="Assets\Scripts\Menus\MenuControl.cs" />
+     <Compile Include="Assets\Scripts\Menus\TrainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\CameraControl.cs" />
-     <Compile Include="Assets\Scripts\Whack-A-Mole\ColorControl.cs" />
-     <Compile Include="Assets\Scripts\Whack-A-Mole\DataContainer.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\MasterMoleControl.cs" />
-     <Compile Include="Assets\Scripts\Whack-A-Mole\MenuControl.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\MoleControl.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\PlayerControl.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\ScoreControl.cs" />
      <Compile Include="Assets\Scripts\Whack-A-Mole\TimerControl.cs" />
-     <Compile Include="Assets\Scripts\Whack-A-Mole\TrainMenuControl.cs" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-BasicOutline.shader" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-LightedOutline.shader" />
